создание графа зависимостей

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,13 @@
         Настройки
     </string>
 
+    <string name="nav_item_favourite">
+        Избранное
+    </string>
+
+    <string name="nav_item_profile">
+        Профиль
+    </string>
+
 
 </resources>
