--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,10 @@
         Профиль
     </string>
 
+    <string name="button_login">
+        Войти
+    </string>
+
     <integer name="com_vk_sdk_AppId">
         53293271
     </integer>
